--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </li>
             <p>Home</p>
             <li>
-                <a href="#">Bouton</a>
+                <a href="boutonhome.css">Bouton</a>
             </li>
     </body>
 </html>
