--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p>Home</p>
             <li>
                 <a href="boutonhome.css">Bouton</a>
+                <a href="stylehome.css">style</a>
             </li>
     </body>
 </html>
