--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
                 <a href="iframe.css">iframe</a>
                 <a href="scroll.css">scroll</a>          
             </li>
+        <p>galery</p>
+        <li>
+            <a href="style.css">style</a>
+            <a href="galery.css">galery</a>
+            <a href="bouton.css">bouton</a>
     </body>
 </html>
