--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
             <a href="galery.css">galery</a>
             <a href="bouton.css">bouton</a>
             <a href="social.css">bouton</a>
+        <p>Lycée</p>
+           <li>
+               <a href="style.css">stylecours</a>
     </body>
 </html>
